# gobang

./: .gitignore  ARCHIVE_v3.0.0.md  Cargo.toml  DEBUG_FEATURES.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  LICENSE  MOBILE_BUILD.md  MOBILE_STATUS.md  README-DEPLOY.md  README.md  VERSION_3.0_ROADMAP.md  auto-test.js  build-wasm.sh  check-mobile-env.sh  check-ui.html  debug-test.js  deploy-simple.sh  deploy.sh  detailed-debug.js  iOS_COMMAND_LINE_DEBUG.md  package-lock.json  package.json  setup-mobile.sh  simple-test.js  test-build.sh  test-functionality.js  test-mobile-build.sh  test-report.json  tsconfig.json
docs/: AI_ARCHITECTURE.md  ARCHITECTURE.md  BRANCH_STRATEGY.md  README.md
public/: index.html
shared_core/: Cargo.toml
shared_core/src/: lib.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/src-tauri/icons/src-tauri/icons/: icon.icns
src-tauri/src/: ai_engine.rs  lib.rs  main.rs
src/components/: ChessBoard.tsx  GameControls.tsx  GameStatus.tsx  WinnerAnnouncement.tsx
src/hooks/: useGameState.ts
src/styles/: App.css
src/types/: index.ts
src/utils/: aiDecision.ts  aiEngine.ts  gameLogic.ts  tauriAI.ts  wasmAI.ts
wasm_lib/: Cargo.toml
wasm_lib/src/: lib.rs
